<resources>
    <string name="app_name">Quản lý đặt hàng</string>
    <string name="action_search">Search</string>
    <string name="dondathang_tilte">Danh sách đơn hàng</string>

    <string name="title_tb_sp">Sản phẩm</string>
    <string name="title_tb_themsp">Thêm sản phẩm</string>
    <string name="title_tb_suasp">Sửa sản phẩm</string>
    <string name="tenSP">Tên sản phẩm</string>
    <string name="maSP">Mã sản phẩm</string>
    <string name="xuatxu">Xuất xứ</string>
    <string name="dongia">Đơn giá</string>
    <string name="themsp">Thêm sản phẩm</string>
    <string name="suasp">Sửa thông tin</string>
    <string name="masp">Mã</string>
    <string name="tensp">Tên</string>
    <string name="confirm_delete">Xóa sản phẩm ?</string>
    <string name="huy">Hủy</string>
    <string name="xoa">Xóa</string>
    <string name="search">Search here</string>
    <string name="ok">Ok</string>
    <string name="image">Hình ảnh</string>
    <string name="chiDanOTP">Chúng tôi sẽ gửi bạn một mã gồm 6 chữ số đến số điện thoại bạn đã đăng kí</string>
    <string name="tenKH">Tên khách hàng</string>
    <string name="diaChi">Địa chỉ</string>
    <string name="SDT">Số điện thoai</string>
    <string name="them">Thêm</string>
    <string name="chon">Chon</string>
    <string name="capNhat">Cập nhật</string>

    <string name="thongtindondathang">THÔNG TIN ĐƠN ĐẶT HÀNG</string>
    <string name="themsanpham">THÊM SẢN PHẨM</string>
    <string name="capnhat">XUẤT FILE</string>
</resources>