<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.KhachHang.AddKhachHangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/purple_500" />

        <Button
            android:id="@+id/btnAddChooseImg"
            style="@style/custom_button_2"
            android:text="@string/chon" />
    </LinearLayout>


    <EditText
        android:id="@+id/edtAddNameKH"
        android:inputType="text"
        style="@style/custom_edit_text"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_person_icon"
        android:hint="@string/tenKH" />

    <EditText
        android:id="@+id/edtAddAddressKH"
        android:inputType="text"
        style="@style/custom_edit_text"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_location_on_icon"
        android:hint="@string/diaChi" />

    <EditText
        android:id="@+id/edtAddPhoneKH"
        android:inputType="phone"
        style="@style/custom_edit_text"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_local_phone_icon"
        android:hint="@string/SDT" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAddKH"
            style="@style/custom_button_2"
            android:textColor="@drawable/custom_button_2"
            android:background="@drawable/custom_button_2"
            android:text="@string/them" />
        <Button
            android:id="@+id/btnCancelAddKH"
            style="@style/custom_button_2"
            android:background="@drawable/custom_button_3"
            android:textColor="@drawable/custom_button_3"
            android:text="@string/huy" />

    </LinearLayout>


</LinearLayout>