<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#4CAF50"
            app:title="@string/title_tb_sp" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/customButton"
            android:layout_gravity="end"
            android:drawableStart="@drawable/ic_baseline_add_circle_24"
            android:text="@string/themsp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            style="@style/style_textview"
            android:layout_width="50dp"
            android:text="@string/masp" />

        <TextView
            style="@style/style_textview"
            android:layout_width="110dp"
            android:text="@string/tensp" />

        <TextView
            style="@style/style_textview"
            android:layout_width="80dp"
            android:text="@string/xuatxu" />

        <TextView
            style="@style/style_textview"
            android:layout_width="100dp"
            android:text="@string/dongia" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:nestedScrollingEnabled="false" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>