<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_weight="10"
    android:orientation="horizontal">
<LinearLayout
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="180dp">

    <LinearLayout
        android:layout_weight="9"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/style_textview"
            android:id="@+id/textViewMaSP"
            android:layout_width="50dp"
            android:text="@string/maSP"
            />

        <TextView
            style="@style/style_textview"
            android:id="@+id/textViewTenSP"
            android:layout_width="110dp"
            android:text="@string/tenSP"/>

        <TextView
            style="@style/style_textview"
            android:id="@+id/textViewXuatXu"
            android:layout_width="80dp"
            android:text="@string/xuatxu"/>

        <TextView
            style="@style/style_textview"
            android:id="@+id/textViewDonGia"
            android:layout_width="100dp"
            android:text="@string/dongia"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_delete_forever_24"
            android:tooltipText="Xóa sản phẩm" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>