<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_delete_forever_24" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm_delete"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:id="@+id/buttonHuy"
            style="@style/customButton"
            android:gravity="center"
            android:text="@string/huy" />

        <Button
            android:background="#C32828"
            android:layout_width="100dp"
            android:id="@+id/buttonDongY"
            style="@style/customButton"
            android:gravity="center"
            android:text="@string/xoa" />
    </LinearLayout>
</LinearLayout>