<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_weight="10"
    android:background="#D6C7C7"
    android:orientation="horizontal"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/id"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:text="@string/maSP" />
        <TextView
            android:id="@+id/name"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:text="@string/tenSP" />

        <TextView
            android:id="@+id/price"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:text="@string/dongia" />

        <TextView
            android:id="@+id/quantity"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:text="Số lượng" />

        <TextView
            android:id="@+id/total"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:minHeight="35dp"
            android:text="Số lượng" />
    </LinearLayout>
</androidx.cardview.widget.CardView>