<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="10dp"
    android:layout_weight="10"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMaSP"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:gravity="left|center"
                android:text="@string/maSP" />

            <TextView
                android:id="@+id/textViewTenSP"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:gravity="left|center"
                android:text="@string/tenSP" />

            <TextView
                android:id="@+id/textViewXuatXu"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:gravity="left|center"
                android:text="@string/xuatxu" />

            <TextView
                android:id="@+id/textViewDonGia"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                android:gravity="left|center"
                android:text="@string/dongia" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center|bottom"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/pressed_button_delete"
                android:src="@drawable/ic_baseline_delete_outline_24" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>