<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_tb_themsp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMaSP"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/maSP"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/editTextMaSP"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/tenSP"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/editTextTenSP"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/xuatxu"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/editTextXuatXuSP"
                android:layout_width="match_parent"
                android:layout_height="50dp">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/dongia"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:padding="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/editTextDonGia"
                android:layout_width="match_parent"
                android:layout_height="50dp"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageViewChonAnh"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:src="@drawable/ic_baseline_camera_enhance_24" />

                <ImageView
                    android:id="@+id/imageViewSelectFromFile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:src="@drawable/ic_baseline_folder_24" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_add_circle_24" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonThemSP"
            style="@style/customButton"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_baseline_add_circle_24"
            android:text="@string/themsp" />

        <Button
            android:id="@+id/btnhuy"
            android:textAllCaps="false"
            android:minWidth="100dp"
            android:layout_gravity="center"
            style="@style/DialogButton"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/btnthem"
            android:background="@drawable/ripple_effect_outline"
            android:text="Hủy"
            android:textColor="@color/dialogBackColor"
            android:drawableLeft="@drawable/ic_baseline_cancel_24"
            app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>