<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_horizontal|left"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="9"
            android:gravity="center_horizontal|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMaSP"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/maSP" />

            <TextView
                android:id="@+id/textViewTenSP"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/tenSP" />

            <TextView
                android:id="@+id/textViewXuatXu"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/xuatxu" />

            <TextView
                android:id="@+id/textViewDonGia"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/dongia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center|bottom"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/pressed_button_delete"
                android:src="@drawable/ic_baseline_delete_outline_24" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>