<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TTDDH_Activity"
    >

    <TextView
        android:id="@+id/tvTittle_ttddh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/thongtindondathang"
        style="@style/heading1"
        android:background="#a5e65c"
        />

    <LinearLayout
        android:id="@+id/llThongTin_ttddh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTittle_ttddh"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mã đơn hàng"
                style="@style/heading3"
                />
            <TextView
                android:id="@+id/tvMaDH_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                style="@style/data"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ngày đặt hàng"
                style="@style/heading3"
                />
            <TextView
                android:id="@+id/tvNgayDH_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19/04/2022 12:12"
                style="@style/data"
                />
        </LinearLayout>

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tên khách hàng"
                style="@style/heading3"
                />
            <TextView
                android:id="@+id/tvTenKH_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tom Hidlleson"
                style="@style/data"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SĐT"
                style="@style/heading3"
                />
            <TextView
                android:id="@+id/tvSDT_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0369369369"
                style="@style/data"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Địa chỉ"
                style="@style/heading3"
                />
            <TextView
                android:id="@+id/tvDiaChi_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90 Man Thiện"
                style="@style/data"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tổng giá trị đơn hàng"
                style="@style/heading3"
                />

            <TextView
                android:id="@+id/tvTongTien_ttddh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                style="@style/data"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_ttddh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llThongTin_ttddh"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnThemSP_ttddh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/themsanpham"
        style="@style/customButton"
        />

    <Button
        android:id="@+id/btnCapNhat_ttddh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/capnhat"
        style="@style/customButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>